:bug: Fixing a bug with lyrics spacing in card

--- a/src/components/lyrics-card/LyricsCard.module.sass
+++ b/src/components/lyrics-card/LyricsCard.module.sass
@@ -145,7 +145,7 @@
                     transform: scaleX(-1)
     &[data-aspect-ratio='1:1']
         .lyrics-container
-            gap: fluid(320, 6, 500, 12)
+            gap: fluid(320, 9, 500, 12)
             .editable-label
                 font-size: fluid(320, 10.5, 500, 18)
         footer
@@ -154,7 +154,7 @@
                 font-size: fluid(230, 7, 500, 15)
     &[data-aspect-ratio='3:4']
         .lyrics-container
-            gap: fluid(320, 2, 500, 7)
+            gap: fluid(320, 6, 500, 7)
             .editable-label
                 font-size: fluid(320, 9.5, 500, 16)
                 .wrapping-span
